# Game

./: CMakeLists.txt  TODO.txt  resources.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/stb/: stb_image_resize.h
resources/models/: cube.mtl  simple_scene.mtl
resources/shaders/: basic.fs.glsl  basic.vs.glsl  batch.fs.glsl  batch.vs.glsl
src/: camera.cpp  camera.h  debug.cpp  debug.h  ecs.cpp  loader.cpp  loader.h  main.cpp  main2.cpp  maths.cpp  maths.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  test.cpp  texture.cpp  texture.h  types.h  utils.cpp  utils.h  window.cpp  window.h
src/renderer/opengl/: buffer.h  buffers.cpp
